# Lima-camera-xh

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  env.yaml
conda/camera/: conda_build_config.yaml  meta.yaml
conda/tango/: meta.yaml
doc/: Doxyfile  index.rst
include/: XhBinCtrlObj.h  XhCamera.h  XhClient.h  XhDetInfoCtrlObj.h  XhInterface.h  XhRoiCtrlObj.h  XhSyncCtrlObj.h
python/: __init__.py
sip/: XhCamera.sip  XhInterface.sip
src/: Makefile  XhBinCtrlObj.cpp  XhCamera.P  XhCamera.cpp  XhClient.P  XhClient.cpp  XhDetInfoCtrlObj.P  XhDetInfoCtrlObj.cpp  XhInterface.P  XhInterface.cpp  XhRoiCtrlObj.cpp  XhSyncCtrlObj.P  XhSyncCtrlObj.cpp
tango/: CMakeLists.txt  Xh.py
test/: CMakeLists.txt  Makefile  XhTest  XhTest.cpp  XhTest.py  test_Xh_camera.cpp
